[package]
name = "thermite"
version = "0.2.0"
authors = ["Andrew Bastien <volundmush@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.27", features = ["full"]}
tokio-util = {version = "0.7", features = ["codec"]}
tokio-stream = {version = "0.1", features = ["time"]}
rand = "0.8"
bytes = "1.2"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.7"
chrono = "0.4"
tungstenite = "0.18"
tokio-tungstenite = "0.18"
tokio-rustls = "0.24"
regex = "1.6"
async-trait = "0.1"
futures = "0.3"
once_cell = "1.17"
tracing-subscriber = "0.3"
tracing = "0.1"
