[package]
name = "thermite"
version = "0.2.0"
authors = ["Andrew Bastien <volundmush@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.36.0", features = ["full"]}
tokio-util = {version = "0.7", features = ["codec"]}
tokio-stream = {version = "0.1", features = ["time"]}
rand = "0.8"
bytes = "1.5"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
tungstenite = "0.21"
tokio-tungstenite = "0.21"
regex = "1.10"
async-trait = "0.1"
futures = "0.3"
once_cell = "1.19"
tracing-subscriber = "0.3"
tracing = "0.1"
clap = {version = "4.5", features = ["derive"]}
flate2 = "1.0"
lazy-regex = "3.1"
trust-dns-resolver = "0.23"
rustls-pemfile = "2.1"
warp = {version = "0.3", features = ["default", "tls", "compression", "websocket"]}
tera = "1.19"
