[package]
name = "thermite-ansi"
version = "0.1.0"
authors = ["Andrew Bastien <volundmush@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
textwrap = {version = "0.12", features = ["hyphenation"]}
vtparse = "0.2"
regex = "1.3"
hyphenation = "0.8.0"
thermite-util = {version = "0.1", path = "../thermite-util"}
logos = "0.11"
