[package]
name = "thermite-lib"
version = "0.1.0"
authors = ["Andrew Bastien <volundmush@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
bytes = "0.5"
flate2 = "1.0"
tokio = {version = "0.2", features = ["full"]}
tokio-util = {version = "0.3", features = ["codec"]}
tokio-rustls = "0.14"
futures-core = "0.3"
futures = "0.3"
serde = "1.0"
tungstenite = "0.11"
tokio-tungstenite = {version = "0.11", features = ["stream"]}
logos = "0.11"
#thrussh = "0.28"
lazy_static = "1.4"
regex = "1.3"
#unicode_segmentation = "1.6"