[package]
name = "thermite-mush"
version = "0.1.0"
authors = ["Andrew Bastien <volundmush@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.16"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
