[package]
name = "thermite-net"
version = "0.1.0"
authors = ["Andrew Bastien <volundmush@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2", features = ["tcp", "dns", "sync", "macros"]}
tokio-rustls = "0.14"
futures = "0.3"
futures-core = "0.3"
