[package]
name = "thermite-telnet"
version = "0.1.0"
authors = ["Andrew Bastien <volundmush@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
flate2 = "1.0"
tokio = {version = "0.2", features = ["full"]}
tokio-util = {version = "0.3", features = ["codec"]}
tokio-rustls = "0.14"
rand = "0.7"
futures-core = "0.3"
futures = "0.3"