[package]
name = "thermite-telnet"
version = "0.1.0"
authors = ["Andrew Bastien <volundmush@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
tokio-util = {version = "0.3", features = ["codec"]}
flate2 = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = {version = "0.2", features = ["sync", "time", "macros", "rt-core"]}
futures = "0.3.5"
