[package]
name = "thermite"
version = "0.1.0"
authors = ["Andrew Bastien <volundmush@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "0.8.1"
tokio = {version = "0.2.21", features = ["full"]}
thermite_net = {path = "../thermite_net"}