[package]
name = "thermite"
version = "0.1.0"
authors = ["Andrew Bastien <volundmush@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2", features = ["full"]}
tokio-util = {version = "0.3", features = ["codec"]}
tokio-rustls = "0.14"
rand = "0.7"
bytes = "0.5"
diesel = {version = "1.4", features = ["postgres", "chrono", "serde_json"]}
diesel_cli = "1.4"
tokio-diesel = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
#thermite-ansi = {version = "0.1", path = "../thermite-ansi"}
thermite-telnet = {version = "0.1", path = "../thermite-telnet"}
thermite-net = {version = "0.1", path = "../thermite-net"}
thermite-protocol = {version = "0.1", path = "../thermite-protocol" }
dotenv = "0.15"
toml = "0.5"
chrono = "0.4"
tungstenite = "0.11"
tokio-tungstenite = {version = "0.11", features = ["stream"]}
logos = "0.11"
regex = "1.3"
